--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crud-demo",
+  "name": "MEANTest-SaaS",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,9 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.10"
-  },
-  "devDependencies": {
+    "mongoose": "^5.4.12",
     "nodemon": "^1.18.10"
   }
 }
