--- a/config/config.development.json
+++ b/config/config.development.json
@@ -1,8 +1,9 @@
 {
     "databaseConfig": {
         "host": "localhost",
-		"port": "27017",
-        "database": "PMSCrud"
+        "port": "27017",
+        "database": "difoyer_master",
+        "prefix": "dev_"
     },
     "nodeConfig": {
         "host": "localhost",
