--- a/config/config.development.json
+++ b/config/config.development.json
@@ -1,7 +1,7 @@
 {
     "databaseConfig": {
-        "host": "localhost",
-        "port": "27017",
+        "host": "192.168.1.58",
+        "port": "27014",
         "database": "difoyer_master",
         "prefix": "dev_"
     },
